build (not fully complete win installer) small fixes to settings